# Tira-harjoitustyo-Johannes-Tynjala

./: .coveragerc  .gitignore  Määrittelydokumentti.md  README.md  Viikkoraportti 1.md  pyproject.toml
dokumentaatio/: Käyttöohje.md  Testausdokumentti.md  Toteutusdokumentti.md
dokumentaatio/viikkoraportit/: Viikkoraportti 1.md  Viikkoraportti 2.md  Viikkoraportti 3.md  Viikkoraportti 4.md  Viikkoraportti 5.md  Viikkoraportti 6.md  Viimeinen viikkoraportti.md
htmlcov/: index.html  koodi_purkausosa_py.html  koodi_salausosa1_py.html  koodi_salausosa2_py.html  koodi_salausosa3_py.html  status.json
koodi/: kayttoliittyma.py  luvuksi_muunnon_purkaus.txt  merkkimatriisi.txt  purettu_viesti.txt  purkausosa.py  salattava_sisalto.txt  salattu_viesti.txt  salausosa1.py  salausosa2.py  salausosa3.py  tiedostonkasittely.py
koodi/testit/: purkausosa_test.py  salausosa1_test.py  salausosa2_test.py  salausosa3_test.py
