[tool.poetry]
name = "tira-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Jatynjala <johannestynjala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
